--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -9,7 +9,7 @@
   width: var(--cWidth);
   max-width: 1920px;
   margin: auto;
-  z-index: 9;
+  z-index: 12;
 }
 
 .what-box {
@@ -17,7 +17,7 @@
   display: flex;
   justify-content: center;
   position: relative;
-  z-index: 9;
+  z-index: 12;
 }
 
 .what-box h2 {
@@ -38,7 +38,7 @@
 
 .what-box-in {
   flex-direction: column;
-  height: 500px;
+  height: 620px;
   margin-left: 200px;
   position: relative;
   display: flex;
@@ -47,7 +47,7 @@
 .what-content {
   width: 450px;
   height: 33%;
-  min-height: 50%;
+  min-height: 40%;
   transition: 0.5s;
   /* border: 0.5px dashed rgba(255, 255, 255, 0.3); */
   position: relative;
@@ -57,14 +57,14 @@
 
 .what-noTouch:hover,
 .what-content-active {
-  min-height: 67%;
-  padding: 40px 50px;
+  min-height: 78%;
+  padding: 35px 50px;
 }
 
 .what-noTouch:hover~.what-content,
 .what-box-in:hover .what-noTouch:not(:hover),
 .what-content.what-sibling {
-  min-height: 33%;
+  min-height: 22%;
   padding: 10px 50px;
 }
 
@@ -231,7 +231,13 @@
 
 .what-content-in {
   height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  scrollbar-width: none;
+}
+
+.what-content-in::-webkit-scrollbar {
+  display: none;
 }
 
 .what-content-in h5 {
@@ -282,7 +288,7 @@
   }
 
   .what-box-in {
-    height: 400px;
+    height: 480px;
   }
 
   .what-content h3 {
@@ -332,7 +338,7 @@
   }
 
   .what-box-in {
-    height: 500px;
+    height: 560px;
     margin-left: -50px;
   }
 
@@ -347,14 +353,14 @@
 
   .what-noTouch:hover,
   .what-content-active {
-    min-height: 67%;
+    min-height: 78%;
     padding: 50px;
   }
 
   .what-noTouch:hover~.what-content,
   .what-box-in:hover .what-noTouch:not(:hover),
   .what-content.what-sibling {
-    min-height: 33%;
+    min-height: 22%;
     padding: 10px 50px;
   }
 }
@@ -375,7 +381,7 @@
   }
 
   .what-box:last-child {
-    height: 500px;
+    height: 560px;
   }
 
   .what-box {
@@ -390,7 +396,7 @@
 
   .what-box-in {
     margin-left: 0px;
-    height: 450px;
+    height: 500px;
   }
 
   .what-content h5,
